--- a/MSGG/Base.lproj/Main.storyboard
+++ b/MSGG/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -39,6 +40,20 @@
                                 <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="APy-lM-Cg5">
+                                <rect key="frame" x="663" y="477" width="594" height="126"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="round_cancel_white_big" translatesAutoresizingMaskIntoConstraints="NO" id="gMt-g6-bre">
+                                        <rect key="frame" x="0.0" y="0.0" width="594" height="72"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No supported video streams found" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cEv-6w-1Te">
+                                        <rect key="frame" x="0.0" y="80" width="594" height="46"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9f8-hb-gxs">
                                 <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
                                 <subviews>
@@ -52,29 +67,27 @@
                                                     <constraint firstAttribute="height" constant="100" id="tgy-wj-dDG"/>
                                                 </constraints>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5du-F6-AbX">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Stream title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5du-F6-AbX">
                                                 <rect key="frame" x="108" y="0.0" width="1632" height="58"/>
-                                                <string key="text">King's Bounty: Crossworlds (мод. Красные пески) - "Что за запах?! А-а-а, это наши войска…"
-</string>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Miker" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xxT-sH-E19">
-                                                <rect key="frame" x="108" y="65" width="73" height="35"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Streamer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xxT-sH-E19">
+                                                <rect key="frame" x="108" y="65" width="122" height="35"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" image="baseline_person_white_big" translatesAutoresizingMaskIntoConstraints="NO" id="ozs-Lg-4Ud">
-                                                <rect key="frame" x="211" y="65" width="35" height="35"/>
+                                                <rect key="frame" x="260" y="65" width="35" height="35"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="35" id="cjT-5T-i9E"/>
                                                     <constraint firstAttribute="width" secondItem="ozs-Lg-4Ud" secondAttribute="height" id="mXc-7I-IoW"/>
                                                 </constraints>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="53" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Px-DX-Zgc">
-                                                <rect key="frame" x="254" y="65" width="36" height="35"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Px-DX-Zgc">
+                                                <rect key="frame" x="303" y="65" width="18" height="35"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -98,14 +111,14 @@
                                         </constraints>
                                     </view>
                                     <button opaque="NO" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="77N-1g-BeY" customClass="PlayerControlButton" customModule="MSGG" customModuleProvider="target">
-                                        <rect key="frame" x="500" y="860" width="280" height="120"/>
+                                        <rect key="frame" x="664" y="860" width="116" height="120"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="120" id="roD-r5-UMH"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
                                         <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
                                         <inset key="imageEdgeInsets" minX="-20" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                        <state key="normal" title="Apex Legends" image="baseline_videogame_asset_white"/>
+                                        <state key="normal" image="baseline_videogame_asset_white"/>
                                         <connections>
                                             <action selector="gameButtonTriggered:" destination="JI7-gJ-ciY" eventType="primaryActionTriggered" id="e3v-iC-BWB"/>
                                         </connections>
@@ -168,11 +181,17 @@
                         </subviews>
                         <constraints>
                             <constraint firstItem="9f8-hb-gxs" firstAttribute="top" secondItem="rKy-FM-xOt" secondAttribute="top" id="08o-OI-RCO"/>
+                            <constraint firstItem="w8e-Q2-ls6" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="APy-lM-Cg5" secondAttribute="trailing" id="0tf-Lt-Cfi"/>
                             <constraint firstAttribute="trailing" secondItem="dGY-1y-p4H" secondAttribute="trailing" id="DZE-bo-hds"/>
                             <constraint firstAttribute="bottom" secondItem="9f8-hb-gxs" secondAttribute="bottom" id="F8E-nh-XVb"/>
+                            <constraint firstItem="APy-lM-Cg5" firstAttribute="top" relation="greaterThanOrEqual" secondItem="w8e-Q2-ls6" secondAttribute="top" id="Gle-9r-Hmr"/>
                             <constraint firstItem="9f8-hb-gxs" firstAttribute="leading" secondItem="rKy-FM-xOt" secondAttribute="leading" id="Rfg-2u-IQX"/>
+                            <constraint firstItem="APy-lM-Cg5" firstAttribute="centerX" secondItem="rKy-FM-xOt" secondAttribute="centerX" id="TH8-sd-9fV"/>
+                            <constraint firstItem="APy-lM-Cg5" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="w8e-Q2-ls6" secondAttribute="leading" id="W60-bU-ypR"/>
                             <constraint firstAttribute="bottom" secondItem="dGY-1y-p4H" secondAttribute="bottom" id="b49-GJ-wQ5"/>
+                            <constraint firstItem="w8e-Q2-ls6" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="APy-lM-Cg5" secondAttribute="bottom" id="efc-70-FYN"/>
                             <constraint firstAttribute="trailing" secondItem="9f8-hb-gxs" secondAttribute="trailing" id="q4b-xv-24I"/>
+                            <constraint firstItem="APy-lM-Cg5" firstAttribute="centerY" secondItem="rKy-FM-xOt" secondAttribute="centerY" id="rF6-I2-2CS"/>
                             <constraint firstItem="dGY-1y-p4H" firstAttribute="top" secondItem="rKy-FM-xOt" secondAttribute="top" id="rd7-LR-D3h"/>
                             <constraint firstItem="dGY-1y-p4H" firstAttribute="leading" secondItem="rKy-FM-xOt" secondAttribute="leading" id="sFu-kp-Jh2"/>
                         </constraints>
@@ -183,6 +202,8 @@
                         <outlet property="controlsView" destination="9f8-hb-gxs" id="U9g-VX-HY9"/>
                         <outlet property="favoriteButton" destination="z49-32-HNb" id="f9p-0h-T3l"/>
                         <outlet property="gameButton" destination="77N-1g-BeY" id="q0Y-05-O9x"/>
+                        <outlet property="messageLabel" destination="cEv-6w-1Te" id="OMv-5c-OP3"/>
+                        <outlet property="noSupportedVideoFoundView" destination="APy-lM-Cg5" id="eFK-bP-LYk"/>
                         <outlet property="playPauseButton" destination="LJ7-ac-rKS" id="dVe-06-gTx"/>
                         <outlet property="playerView" destination="dGY-1y-p4H" id="ITa-x0-W1D"/>
                         <outlet property="qualityButton" destination="eJt-xM-Oq3" id="17w-j2-yxg"/>
@@ -193,13 +214,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PKG-UD-X29" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2416" y="1143"/>
+            <point key="canvasLocation" x="-2542" y="1143"/>
         </scene>
     </scenes>
     <resources>
         <image name="baseline_favorite_white" width="72" height="72"/>
         <image name="baseline_person_white_big" width="96" height="96"/>
         <image name="baseline_videogame_asset_white" width="36" height="36"/>
+        <image name="round_cancel_white_big" width="72" height="72"/>
         <image name="round_pause_white" width="96" height="96"/>
         <image name="round_settings_white" width="72" height="72"/>
     </resources>
