all collection view cells updated to use default apple style image focus animation; all cells labels are using text color trait variations now

--- a/MSGG/Screens/Common/Views/TitleHeaderReusableView.xib
+++ b/MSGG/Screens/Common/Views/TitleHeaderReusableView.xib
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,10 +22,10 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                     <variation key="userInterfaceStyle=dark">
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="textColor" name="color-for-dark"/>
                     </variation>
                     <variation key="userInterfaceStyle=light">
-                        <nil key="textColor"/>
+                        <color key="textColor" name="color-for-light"/>
                     </variation>
                 </label>
             </subviews>
@@ -38,4 +39,12 @@
             </connections>
         </collectionReusableView>
     </objects>
+    <resources>
+        <namedColor name="color-for-dark">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="color-for-light">
+            <color red="0.11764705882352941" green="0.11764705882352941" blue="0.11764705882352941" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
