--- a/MSGG/Screens/Games and Genres/Views/CategoryCVCell.xib
+++ b/MSGG/Screens/Games and Genres/Views/CategoryCVCell.xib
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,51 +13,72 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CategoryCVCell" id="h6h-f4-hy3" customClass="CategoryCVCell" customModule="MSGG" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="340" height="425"/>
+            <rect key="frame" x="0.0" y="0.0" width="204" height="384"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                <rect key="frame" x="0.0" y="0.0" width="340" height="425"/>
+                <rect key="frame" x="0.0" y="0.0" width="204" height="384"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BYB-gb-sVG">
-                        <rect key="frame" x="40" y="20" width="260" height="347"/>
+                        <rect key="frame" x="0.0" y="0.0" width="204" height="285"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="BYB-gb-sVG" secondAttribute="height" multiplier="150:200" id="HI6-d5-yUc"/>
+                            <constraint firstAttribute="width" secondItem="BYB-gb-sVG" secondAttribute="height" multiplier="272:380" id="HI6-d5-yUc"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="taz-ab-1Zn">
-                        <rect key="frame" x="40" y="373" width="260" height="27"/>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
+                        <rect key="frame" x="0.0" y="330" width="204" height="28"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="23"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
+                        <variation key="userInterfaceStyle=dark">
+                            <color key="textColor" name="color-for-dark"/>
+                        </variation>
+                        <variation key="userInterfaceStyle=light">
+                            <color key="textColor" name="color-for-light"/>
+                        </variation>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="N streams" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eJj-15-FYT">
-                        <rect key="frame" x="40" y="404" width="260" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="0.0" y="362" width="204" height="22"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
+                        <variation key="userInterfaceStyle=dark">
+                            <color key="textColor" name="color-for-dark"/>
+                        </variation>
+                        <variation key="userInterfaceStyle=light">
+                            <color key="textColor" name="color-for-light"/>
+                        </variation>
                     </label>
                 </subviews>
             </view>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="taz-ab-1Zn" firstAttribute="top" secondItem="BYB-gb-sVG" secondAttribute="bottom" constant="45" id="1OK-U4-EOh"/>
                 <constraint firstItem="eJj-15-FYT" firstAttribute="leading" secondItem="taz-ab-1Zn" secondAttribute="leading" id="2a5-2r-5sw"/>
                 <constraint firstItem="taz-ab-1Zn" firstAttribute="trailing" secondItem="BYB-gb-sVG" secondAttribute="trailing" id="Jh5-mi-KmI"/>
-                <constraint firstAttribute="bottom" secondItem="eJj-15-FYT" secondAttribute="bottom" id="OHV-8c-t2P"/>
-                <constraint firstItem="BYB-gb-sVG" firstAttribute="leading" secondItem="h6h-f4-hy3" secondAttribute="leading" constant="40" id="Ou2-np-to2"/>
+                <constraint firstItem="BYB-gb-sVG" firstAttribute="leading" secondItem="h6h-f4-hy3" secondAttribute="leading" id="Ou2-np-to2"/>
                 <constraint firstItem="taz-ab-1Zn" firstAttribute="leading" secondItem="BYB-gb-sVG" secondAttribute="leading" id="ROF-GJ-zSo"/>
-                <constraint firstAttribute="trailing" secondItem="BYB-gb-sVG" secondAttribute="trailing" constant="40" id="bns-uO-ukt"/>
+                <constraint firstAttribute="trailing" secondItem="BYB-gb-sVG" secondAttribute="trailing" id="bns-uO-ukt"/>
                 <constraint firstItem="eJj-15-FYT" firstAttribute="top" secondItem="taz-ab-1Zn" secondAttribute="bottom" constant="4" id="f4B-BE-Pvb"/>
                 <constraint firstItem="eJj-15-FYT" firstAttribute="trailing" secondItem="taz-ab-1Zn" secondAttribute="trailing" id="reb-8S-V5G"/>
-                <constraint firstItem="BYB-gb-sVG" firstAttribute="top" secondItem="h6h-f4-hy3" secondAttribute="top" constant="20" id="uGM-bV-ii3"/>
+                <constraint firstItem="BYB-gb-sVG" firstAttribute="top" secondItem="h6h-f4-hy3" secondAttribute="top" id="uGM-bV-ii3"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="FCM-mh-gpI"/>
+            <size key="customSize" width="205" height="384"/>
             <connections>
-                <outlet property="bottomSpacingCs" destination="OHV-8c-t2P" id="FeK-WW-hdS"/>
                 <outlet property="coverImageView" destination="BYB-gb-sVG" id="6Zv-5S-Sx7"/>
                 <outlet property="streamsLabel" destination="eJj-15-FYT" id="zMU-KY-fRo"/>
                 <outlet property="titleLabel" destination="taz-ab-1Zn" id="Kwd-fy-W6t"/>
             </connections>
+            <point key="canvasLocation" x="-28" y="91"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <namedColor name="color-for-dark">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="color-for-light">
+            <color red="0.11764705882352941" green="0.11764705882352941" blue="0.11764705882352941" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
