--- a/MSGG/Screens/StreamList/Views/StreamCVCell.xib
+++ b/MSGG/Screens/StreamList/Views/StreamCVCell.xib
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,45 +13,69 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="StreamCVCell" id="5gN-br-lB5" customClass="StreamCVCell" customModule="MSGG" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="573" height="343"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="301"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                <rect key="frame" x="0.0" y="0.0" width="573" height="343"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="301"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Gks-mf-TpI">
-                        <rect key="frame" x="40" y="20" width="493" height="267"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="203"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="Gks-mf-TpI" secondAttribute="height" multiplier="480:260" id="zhQ-wO-T7i"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UDt-dJ-jv5">
-                        <rect key="frame" x="40" y="290" width="493" height="27"/>
+                        <rect key="frame" x="0.0" y="248" width="375" height="27"/>
                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
+                        <variation key="userInterfaceStyle=dark">
+                            <color key="textColor" name="color-for-dark"/>
+                        </variation>
+                        <variation key="userInterfaceStyle=light">
+                            <color key="textColor" name="color-for-light"/>
+                        </variation>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Streamer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nnh-xU-9De">
-                        <rect key="frame" x="40" y="321" width="75" height="22"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                        <rect key="frame" x="0.0" y="279" width="77" height="22"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
+                        <variation key="userInterfaceStyle=dark">
+                            <color key="textColor" name="color-for-dark"/>
+                        </variation>
+                        <variation key="userInterfaceStyle=light">
+                            <color key="textColor" name="color-for-light"/>
+                        </variation>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="baseline_person_white" translatesAutoresizingMaskIntoConstraints="NO" id="Uxq-d6-DlS">
-                        <rect key="frame" x="123" y="323" width="20" height="20"/>
+                        <rect key="frame" x="85" y="279" width="22" height="22"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="Uxq-d6-DlS" secondAttribute="height" id="9Gb-aY-gBs"/>
-                            <constraint firstAttribute="height" constant="20" id="bSS-1G-kML"/>
+                            <constraint firstAttribute="height" constant="22" id="bSS-1G-kML"/>
                         </constraints>
+                        <variation key="userInterfaceStyle=dark">
+                            <color key="tintColor" name="color-for-dark"/>
+                        </variation>
+                        <variation key="userInterfaceStyle=light">
+                            <color key="tintColor" name="color-for-light"/>
+                        </variation>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="53" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0kf-D9-Q89">
-                        <rect key="frame" x="147" y="321" width="22" height="22"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                        <rect key="frame" x="111" y="279" width="23" height="22"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
+                        <variation key="userInterfaceStyle=dark">
+                            <color key="textColor" name="color-for-dark"/>
+                        </variation>
+                        <variation key="userInterfaceStyle=light">
+                            <color key="textColor" name="color-for-light"/>
+                        </variation>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="round_cancel_white" translatesAutoresizingMaskIntoConstraints="NO" id="kox-iT-Rne">
-                        <rect key="frame" x="269" y="136" width="36" height="36"/>
+                        <rect key="frame" x="170" y="84" width="36" height="36"/>
                     </imageView>
                 </subviews>
             </view>
@@ -62,29 +87,37 @@
                 <constraint firstItem="Nnh-xU-9De" firstAttribute="leading" secondItem="UDt-dJ-jv5" secondAttribute="leading" id="Jbc-0m-IJ6"/>
                 <constraint firstItem="kox-iT-Rne" firstAttribute="centerX" secondItem="Gks-mf-TpI" secondAttribute="centerX" id="Nrm-Xc-ZZS"/>
                 <constraint firstItem="0kf-D9-Q89" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="Gks-mf-TpI" secondAttribute="trailing" id="O1X-Ft-Cm4"/>
-                <constraint firstItem="Gks-mf-TpI" firstAttribute="leading" secondItem="5gN-br-lB5" secondAttribute="leading" constant="40" id="S50-T4-lrC"/>
+                <constraint firstItem="Gks-mf-TpI" firstAttribute="leading" secondItem="5gN-br-lB5" secondAttribute="leading" id="S50-T4-lrC"/>
                 <constraint firstItem="0kf-D9-Q89" firstAttribute="bottom" secondItem="Uxq-d6-DlS" secondAttribute="bottom" id="Snz-FD-s21"/>
-                <constraint firstItem="Gks-mf-TpI" firstAttribute="top" secondItem="5gN-br-lB5" secondAttribute="top" constant="20" id="TBi-an-mPc"/>
+                <constraint firstItem="Gks-mf-TpI" firstAttribute="top" secondItem="5gN-br-lB5" secondAttribute="top" id="TBi-an-mPc"/>
                 <constraint firstItem="Uxq-d6-DlS" firstAttribute="leading" secondItem="Nnh-xU-9De" secondAttribute="trailing" constant="8" symbolic="YES" id="WQq-RU-w0K"/>
-                <constraint firstAttribute="trailing" secondItem="Gks-mf-TpI" secondAttribute="trailing" constant="40" id="bI4-IV-a8d"/>
-                <constraint firstAttribute="bottom" secondItem="Nnh-xU-9De" secondAttribute="bottom" id="kdB-Xp-udo"/>
+                <constraint firstAttribute="trailing" secondItem="Gks-mf-TpI" secondAttribute="trailing" id="bI4-IV-a8d"/>
+                <constraint firstItem="UDt-dJ-jv5" firstAttribute="top" secondItem="Gks-mf-TpI" secondAttribute="bottom" constant="45" id="bRR-Pi-j9q"/>
                 <constraint firstItem="Nnh-xU-9De" firstAttribute="top" secondItem="UDt-dJ-jv5" secondAttribute="bottom" constant="4" id="ntJ-Oq-heg"/>
                 <constraint firstItem="Uxq-d6-DlS" firstAttribute="bottom" secondItem="Nnh-xU-9De" secondAttribute="bottom" id="rPn-wR-kxL"/>
                 <constraint firstItem="UDt-dJ-jv5" firstAttribute="leading" secondItem="Gks-mf-TpI" secondAttribute="leading" id="siw-0B-GZ1"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="SXD-7U-Mhl"/>
+            <size key="customSize" width="573" height="301"/>
             <connections>
-                <outlet property="bottomSpacingCs" destination="kdB-Xp-udo" id="Mbo-qZ-JlF"/>
                 <outlet property="streamerLabel" destination="Nnh-xU-9De" id="NMZ-Ma-2k2"/>
                 <outlet property="thumbImageView" destination="Gks-mf-TpI" id="Jy6-sX-PHW"/>
                 <outlet property="titleLabel" destination="UDt-dJ-jv5" id="V5H-ta-K4M"/>
+                <outlet property="viewersIcon" destination="Uxq-d6-DlS" id="902-1a-lAU"/>
                 <outlet property="viewersLabel" destination="0kf-D9-Q89" id="h0c-ds-UhH"/>
                 <outlet property="warningImageView" destination="kox-iT-Rne" id="wnA-AV-5La"/>
             </connections>
+            <point key="canvasLocation" x="50.5" y="81.5"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="baseline_person_white" width="27" height="27"/>
         <image name="round_cancel_white" width="36" height="36"/>
+        <namedColor name="color-for-dark">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="color-for-light">
+            <color red="0.11764705882352941" green="0.11764705882352941" blue="0.11764705882352941" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
