--- a/MSGG/Screens/Common/BaseCollectionVC.xib
+++ b/MSGG/Screens/Common/BaseCollectionVC.xib
@@ -10,17 +10,16 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ItemListVC" customModule="MSGG" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BaseCollectionVC" customModule="MSGG" customModuleProvider="target">
             <connections>
                 <outlet property="activityIndicator" destination="i2L-Uq-V09" id="5ff-UF-ZLd"/>
                 <outlet property="collectionView" destination="7pn-OV-XYQ" id="FgG-2o-hQh"/>
-                <outlet property="collectionViewTopOffsetCs" destination="aj6-C7-x7w" id="SsT-Ki-UcL"/>
                 <outlet property="fadeView" destination="pPc-Tz-8qf" id="ZVJ-Ya-Kfv"/>
                 <outlet property="view" destination="iN0-l3-epB" id="Eym-vH-oyN"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view clipsSubviews="YES" contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
