--- a/MSGG/Screens/StreamList/Views/StreamerCVCell.xib
+++ b/MSGG/Screens/StreamList/Views/StreamerCVCell.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.AppleTV.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder.AppleTV.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="appleTV" orientation="landscape">
         <adaptation id="light"/>
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -48,7 +47,6 @@
                 <constraint firstAttribute="trailing" secondItem="Gks-mf-TpI" secondAttribute="trailing" id="bI4-IV-a8d"/>
                 <constraint firstItem="Nnh-xU-9De" firstAttribute="trailing" secondItem="Gks-mf-TpI" secondAttribute="trailing" id="hlP-ir-E5J"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="SXD-7U-Mhl"/>
             <size key="customSize" width="204" height="271"/>
             <connections>
                 <outlet property="streamerLabel" destination="Nnh-xU-9De" id="NMZ-Ma-2k2"/>
